:heavy_plus_sign: Added sound to entities template

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -85,6 +85,44 @@ templates = (
                     width = 300,
                     height = 300
                 }
+            },
+            {
+                name = "Sound",
+                args = {
+                    sounds = (
+                        {
+                            id = "ATTACK",
+                            path = "./assets/laser.wav",
+                            volume = 50,
+                            pitch = 1,
+                            loop = false
+                        },
+                        {
+                            id = "SPAWN",
+                            path = "./assets/spawn.wav",
+                            volume = 50,
+                            pitch = 1,
+                            loop = false
+                        }
+                    )
+                }
+            },
+            {
+                name = "Destruction",
+                args = {
+                    duration = 600,
+                    id = "explosion",
+                    sound = {
+                        path = "./assets/death.wav",
+                        volume = 100,
+                        pitch = 2,
+                        loop = false
+                    }
+                    scale = {
+                        width = 300,
+                        height = 300
+                    }
+                }
             }
         )
     }
