--- a/src/server/configServer.cfg
+++ b/src/server/configServer.cfg
@@ -32,16 +32,16 @@ systems = (
             path = "./config/config.cfg"
         }
     },
-    # {
-    #     dir = "",
-    #     name = "Sfml",
-    #     args = {
-    #         width = 1920,
-    #         height = 1080,
-    #         title = "RType",
-    #         texturesPath = "./config/textures.cfg",
-    #         shadersPath = "./config/shaders.cfg",
-    #         defaultShader = "tritanopia", # Possible values are: "default", "deuteranopia", "protanopia", "tritanopia"
-    #     }
-    # },
+    {
+        dir = "",
+        name = "Sfml",
+        args = {
+            width = 1920,
+            height = 1080,
+            title = "RType",
+            texturesPath = "./config/textures.cfg",
+            shadersPath = "./config/shaders.cfg",
+            defaultShader = "default", # Possible values are: "default", "deuteranopia", "protanopia", "tritanopia"
+        }
+    }
 );
