:fire: Removed commented out code

--- a/src/server/configServer.cfg
+++ b/src/server/configServer.cfg
@@ -41,7 +41,7 @@ systems = (
             title = "RType",
             texturesPath = "./config/textures.cfg",
             shadersPath = "./config/shaders.cfg",
-            defaultShader = "default", # Possible values are: "default", "deuteranopia", "protanopia", "tritanopia"
+            defaultShader = "deuteranopia", # Possible values are: "default", "deuteranopia", "protanopia", "tritanopia"
         }
     }
 );
