:wrench: Fix second game launch by removing network.

--- a/config/server/MarioQuartz.cfg
+++ b/config/server/MarioQuartz.cfg
@@ -14,4 +14,17 @@
     args = {
         path = "./config/levels/config2.cfg"
     }
+},
+{
+    dir = "",
+    name = "RaylibSystem",
+    args = {
+        width = 1920,
+        height = 1080,
+        title = "MarioQuartz",
+        fullscreen = true,
+        modelsPath = "./config/assets/models.cfg",
+        fps = 60,
+        disableCursor = true,
+    }
 }
