--- a/config/server/RType.cfg
+++ b/config/server/RType.cfg
@@ -24,4 +24,16 @@
     args = {
         path = "./config/levels/config.cfg"
     }
+},
+{
+    dir = "",
+    name = "Sfml",
+    args = {
+        width = 1920,
+        height = 1080,
+        title = "RType",
+        texturesPath = "./config/assets/textures.cfg",
+        shadersPath = "./config/assets/shaders.cfg",
+        defaultShader = "default", # Possible values are: "default", "deuteranopia", "protanopia", "tritanopia"
+    }
 }
