--- a/src/server/configServer.cfg
+++ b/src/server/configServer.cfg
@@ -1,5 +1,5 @@
 systemsPath = "./plugins/bin/systems/";
 systems = ( # Uncomment the one you need
-    @include "./config/server/RType.cfg"
-    # @include "./config/server/MarioQuartz.cfg"
+    # @include "./config/server/RType.cfg"
+    @include "./config/server/MarioQuartz.cfg"
 );
