:heavy_plus_sign: Player in config file;

--- a/config/levels/config.cfg
+++ b/config/levels/config.cfg
@@ -129,6 +129,121 @@ templates = (
 ),
 entities = (
     {
+        name = "Player",
+        spawnTime = 0,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 250,
+                    y = 500,
+                    layer = 2
+                }
+            },
+            {
+                name = "Controllable",
+                args = {
+                    FORWARD = "D",
+                    BACKWARD = "Q",
+                    LEFT = "Z",
+                    RIGHT = "S",
+                    ACTION1 = "SPACE",
+                    ACTION2 = "RIGHT_CLICK",
+                    ACTION3 = "MIDDLE_CLICK",
+                    ACTION5 = "SPACE"
+                    ACTION10 = "ENTER"
+                }
+            },
+            {
+                name = "Health",
+                args = {
+                    maxVal = 100,
+                    currentVal = 100
+                }
+            },
+            {
+                name = "Collider",
+                args = {
+                    width = 30,
+                    height = 30
+                }
+            },
+            {
+                name = "Velocity",
+                args = {
+                    x = 0,
+                    y = 0,
+                    factor = 90
+                }
+            },
+            {
+                name = "Visible",
+                args = {
+                    isVisible = false
+                }
+            },
+            {
+                name = "Acceleration",
+                args = {
+                    forward = 5,
+                    backward = -5,
+                    right = 5,
+                    left = -5
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "player"
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 50,
+                    fireRate = 25,
+                    bulletVelocityX = 20,
+                    bulletVelocityY = 0,
+                    spriteId = "shot1"
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 300,
+                    height = 300
+                }
+            },
+            {
+                name = "Type",
+                args = {
+                    id = 1
+                }
+            },
+            {
+                name = "Sound",
+                args = {
+                    sounds = (
+                        {
+                            id = "ATTACK",
+                            path = "./assets/laser.wav",
+                            volume = 100,
+                            pitch = 1,
+                            loop = false
+                        },
+                        {
+                            id = "HIT",
+                            path = "./assets/hit.wav",
+                            volume = 100,
+                            pitch = 1,
+                            loop = false
+                        }
+                    )
+                }
+            }
+        )
+    },
+    {
         name = "Enemy1",
         type = "Enemy",
         spawnTime = 1000,
