:twisted_rightwards_arrows: Merge branch

--- a/config/levels/config2.cfg
+++ b/config/levels/config2.cfg
@@ -31,8 +31,8 @@ entities = (
             {
                 name = "Scale",
                 args = {
-                    width = 250,
-                    height = 250
+                    width = 100,
+                    height = 100
                 }
             }
         )
@@ -58,8 +58,8 @@ entities = (
             {
                 name = "Scale",
                 args = {
-                    width = 250,
-                    height = 250
+                    width = 100,
+                    height = 100
                 }
             }
         )
@@ -108,7 +108,16 @@ entities = (
                 name = "Acceleration",
                 args = {
                     forward = 1,
-                    backward = 1,
+                    backward = 0,
+                    right = 0,
+                    left = 0
+                }
+            },
+            {
+                name = "MaxAcceleration",
+                args = {
+                    forward = 50,
+                    backward = 50,
                     right = 0,
                     left = 0
                 }
@@ -119,6 +128,13 @@ entities = (
                     x = 0,
                     y = 180,
                     z = 0
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 10,
+                    height = 10
                 }
             }
         )
