:heavy_minus_sign: Removed compilation of client since it did not work on windows and it is unnecessary

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(server
     ../ECS/system/SystemManager.cpp
     ../GameEngine/GameEngine.cpp
     
-    ../network/UDPServer.cpp
+    # ../network/UDPServer.cpp
     ../utils/Actions.cpp
     ../utils/Keys.cpp
 )
