:heavy_plus_sign: Added a new item-cube asset in the map.

--- a/config/assets/models.cfg
+++ b/config/assets/models.cfg
@@ -10,5 +10,9 @@ models = (
     {
         name = "circuit-peach-skybox",
         path = "./assets/circuit-peach-skybox.glb",
+    },
+    {
+        name = "item-cube",
+        path = "./assets/item-cube.glb",
     }
 )
