--- a/config/levels/config2.cfg
+++ b/config/levels/config2.cfg
@@ -65,6 +65,33 @@ entities = (
         )
     },
     {
+        name = "item-cube",
+        spawnTime = 0,
+        components = (
+            {
+                name = "Position3d",
+                args = {
+                    x = 0,
+                    y = 100,
+                    z = 10
+                }
+            },
+            {
+                name = "ModelId",
+                args = {
+                    id = "item-cube"
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 100,
+                    height = 100
+                }
+            }
+        )
+    },
+    {
         name = "kart",
         spawnTime = 0,
         components = (
