:sparkles: Added new things in the mario quartz.

--- a/config/assets/models.cfg
+++ b/config/assets/models.cfg
@@ -13,6 +13,6 @@ models = (
     },
     {
         name = "item-cube",
-        path = "./assets/item-cube.glb",
+        path = "./assets/item-cube6.glb",
     }
 )
