--- a/config/assets/textures.cfg
+++ b/config/assets/textures.cfg
@@ -229,5 +229,15 @@ textures = (
         updateRate = 150,
         repeat = false,
         resetBeforeEnd = false
+    },
+    {
+        name = "coin",
+        path = "./assets/coin.png",
+        type = "static",
+    },
+    {
+        name = "crown",
+        path = "./assets/crown.png",
+        type = "static",
     }
 )
