--- a/config/levels/config2.cfg
+++ b/config/levels/config2.cfg
@@ -66,13 +66,13 @@ entities = (
     },
     {
         name = "item-cube",
-        spawnTime = 0,
+        spawnTime = 1000,
         components = (
             {
                 name = "Position3d",
                 args = {
                     x = 0,
-                    y = 100,
+                    y = 0,
                     z = 10
                 }
             },
@@ -85,14 +85,465 @@ entities = (
             {
                 name = "Scale",
                 args = {
-                    width = 100,
-                    height = 100
+                    width = 75,
+                    height = 75
+                }
+            },
+            {
+                name = "Score",
+                args = {
+                    value = 10
+                }
+            },
+            {
+                name = "MarioType",
+                args = {
+                    id = 2
+                }
+            },
+            {
+                name = "Collider3d",
+                args = {
+                    width = 2,
+                    height = 2,
+                    depth = 2
                 }
             }
         )
     },
     {
-        name = "kart",
+        name = "item-cube",
+        spawnTime = 2000,
+        components = (
+            {
+                name = "Position3d",
+                args = {
+                    x = 0,
+                    y = 0,
+                    z = 30
+                }
+            },
+            {
+                name = "ModelId",
+                args = {
+                    id = "item-cube"
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 75,
+                    height = 75
+                }
+            },
+            {
+                name = "Score",
+                args = {
+                    value = 10
+                }
+            },
+            {
+                name = "MarioType",
+                args = {
+                    id = 2
+                }
+            },
+            {
+                name = "Collider3d",
+                args = {
+                    width = 2,
+                    height = 2,
+                    depth = 2
+                }
+            }
+        )
+    },
+    {
+        name = "item-cube",
+        spawnTime = 3000,
+        components = (
+            {
+                name = "Position3d",
+                args = {
+                    x = 2,
+                    y = 0,
+                    z = 50
+                }
+            },
+            {
+                name = "ModelId",
+                args = {
+                    id = "item-cube"
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 75,
+                    height = 75
+                }
+            },
+            {
+                name = "Score",
+                args = {
+                    value = 10
+                }
+            },
+            {
+                name = "MarioType",
+                args = {
+                    id = 2
+                }
+            },
+            {
+                name = "Collider3d",
+                args = {
+                    width = 2,
+                    height = 2,
+                    depth = 2
+                }
+            }
+        )
+    },
+    {
+        name = "item-cube",
+        spawnTime = 4000,
+        components = (
+            {
+                name = "Position3d",
+                args = {
+                    x = 8,
+                    y = 0,
+                    z = 65
+                }
+            },
+            {
+                name = "ModelId",
+                args = {
+                    id = "item-cube"
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 75,
+                    height = 75
+                }
+            },
+            {
+                name = "Score",
+                args = {
+                    value = 10
+                }
+            },
+            {
+                name = "MarioType",
+                args = {
+                    id = 2
+                }
+            },
+            {
+                name = "Collider3d",
+                args = {
+                    width = 2,
+                    height = 2,
+                    depth = 2
+                }
+            }
+        )
+    },
+    {
+        name = "item-cube",
+        spawnTime = 5000,
+        components = (
+            {
+                name = "Position3d",
+                args = {
+                    x = 20,
+                    y = 0,
+                    z = 72
+                }
+            },
+            {
+                name = "ModelId",
+                args = {
+                    id = "item-cube"
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 75,
+                    height = 75
+                }
+            },
+            {
+                name = "Score",
+                args = {
+                    value = 10
+                }
+            },
+            {
+                name = "MarioType",
+                args = {
+                    id = 2
+                }
+            },
+            {
+                name = "Collider3d",
+                args = {
+                    width = 2,
+                    height = 2,
+                    depth = 2
+                }
+            }
+        )
+    },
+    {
+        name = "item-cube",
+        spawnTime = 6000,
+        components = (
+            {
+                name = "Position3d",
+                args = {
+                    x = 40,
+                    y = 0,
+                    z = 75
+                }
+            },
+            {
+                name = "ModelId",
+                args = {
+                    id = "item-cube"
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 75,
+                    height = 75
+                }
+            },
+            {
+                name = "Score",
+                args = {
+                    value = 10
+                }
+            },
+            {
+                name = "MarioType",
+                args = {
+                    id = 2
+                }
+            },
+            {
+                name = "Collider3d",
+                args = {
+                    width = 2,
+                    height = 2,
+                    depth = 2
+                }
+            }
+        )
+    },
+    {
+        name = "item-cube",
+        spawnTime = 7000,
+        components = (
+            {
+                name = "Position3d",
+                args = {
+                    x = 75,
+                    y = 0,
+                    z = 75
+                }
+            },
+            {
+                name = "ModelId",
+                args = {
+                    id = "item-cube"
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 75,
+                    height = 75
+                }
+            },
+            {
+                name = "Score",
+                args = {
+                    value = 10
+                }
+            },
+            {
+                name = "MarioType",
+                args = {
+                    id = 2
+                }
+            },
+            {
+                name = "Collider3d",
+                args = {
+                    width = 2,
+                    height = 2,
+                    depth = 2
+                }
+            }
+        )
+    },
+    {
+        name = "item-cube",
+        spawnTime = 8000,
+        components = (
+            {
+                name = "Position3d",
+                args = {
+                    x = 101,
+                    y = 0,
+                    z = 90
+                }
+            },
+            {
+                name = "ModelId",
+                args = {
+                    id = "item-cube"
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 75,
+                    height = 75
+                }
+            },
+            {
+                name = "Score",
+                args = {
+                    value = 10
+                }
+            },
+            {
+                name = "MarioType",
+                args = {
+                    id = 2
+                }
+            },
+            {
+                name = "Collider3d",
+                args = {
+                    width = 2,
+                    height = 2,
+                    depth = 2
+                }
+            }
+        )
+    },
+    {
+        name = "item-cube",
+        spawnTime = 9000,
+        components = (
+            {
+                name = "Position3d",
+                args = {
+                    x = 95,
+                    y = 0,
+                    z = 115
+                }
+            },
+            {
+                name = "ModelId",
+                args = {
+                    id = "item-cube"
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 75,
+                    height = 75
+                }
+            },
+            {
+                name = "Score",
+                args = {
+                    value = 10
+                }
+            },
+            {
+                name = "MarioType",
+                args = {
+                    id = 2
+                }
+            },
+            {
+                name = "Collider3d",
+                args = {
+                    width = 2,
+                    height = 2,
+                    depth = 2
+                }
+            }
+        )
+    },
+    {
+        name = "score-display",
+        spawnTime = 0,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 5,
+                    y = 5,
+                    layer = 1
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "crown"
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 10,
+                    height = 10
+                }
+            }
+        )
+    },
+    {
+        name = "score-text",
+        spawnTime = 0,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 110,
+                    y = 40,
+                    layer = 1
+                }
+            },
+            {
+                name = "Text",
+                args = {
+                    value = "Score: $",
+                    id = 0
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 10,
+                    height = 10
+                }
+            }
+        )
+    },
+    {
+        name = "player",
         spawnTime = 0,
         components = (
             {
@@ -162,6 +613,26 @@ entities = (
                 args = {
                     width = 10,
                     height = 10
+                }
+            },
+            {
+                name = "Score",
+                args = {
+                    value = 0
+                }
+            },
+            {
+                name = "MarioType",
+                args = {
+                    id = 1
+                }
+            },
+            {
+                name = "Collider3d",
+                args = {
+                    width = 1,
+                    height = 1,
+                    depth = 1
                 }
             }
         )
