--- a/config/server/MarioQuartz.cfg
+++ b/config/server/MarioQuartz.cfg
@@ -10,6 +10,11 @@
 },
 {
     dir = "",
+    name = "Collision3d",
+    args = {}
+},
+{
+    dir = "",
     name = "Config",
     args = {
         path = "./config/levels/config2.cfg"
@@ -24,6 +29,7 @@
         title = "MarioQuartz",
         fullscreen = true,
         modelsPath = "./config/assets/models.cfg",
+        texturesPath = "./config/assets/textures.cfg",
         fps = 60,
         disableCursor = true,
     }
