--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -13,7 +13,20 @@ add_executable(server
 # Set the output name for the server binary
 set_target_properties(server PROPERTIES OUTPUT_NAME "r-type_server")
 
+CPMAddPackage(
+    NAME SFML 
+    GIT_REPOSITORY "https://github.com/SFML/SFML.git"
+    GIT_TAG "2.6.1"
+    # OPTIONS
+    # "BUILD_SHARED_LIBS OFF"
+)
+
 target_link_libraries(server
-    ${LIBCONFIG_LIB_NAME}
+    sfml-graphics
+    sfml-window
+    sfml-graphics
+    sfml-network
     Boost::asio
+    raylib
+    ${LIBCONFIG_LIB_NAME}
 )
